# Calmify

./: .gitignore
Backend/: main.py  pyproject.toml
Backend/app/ai/agents/: chat_agent.py
Backend/app/ai/constants/: model.py
Backend/app/api/v1/: router.py
Backend/app/api/v1/routes/: chat.py
Backend/app/core/: dependencies.py
Frontend/: .flutter-plugins  README.md  pubspec.yaml
Frontend/android/app/: build.gradle.kts
Frontend/assets/data/: exercise_data.json
Frontend/docs/: COLOR_GUIDELINES.md  DESIGN_GUIDELINES.md  app-prd.md
Frontend/ios/Runner/: Info.plist
Frontend/ios/Runner.xcodeproj/: project.pbxproj
Frontend/lib/: app.dart  main.dart
Frontend/lib/core/constants/: constants.dart  duration.dart  padding.dart  radius.dart  shadow.dart  spacer.dart
Frontend/lib/core/router/: app_router.dart
Frontend/lib/core/theme/: app_theme.dart  border_radius.dart  colors.dart  index.dart  padding.dart  shadows.dart  spacer.dart
Frontend/lib/di/: injection.dart
Frontend/linux/: CMakeLists.txt
Frontend/linux/runner/: my_application.cc
Frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
Frontend/macos/Runner.xcodeproj/: project.pbxproj
Frontend/web/: index.html  manifest.json
Frontend/windows/: CMakeLists.txt
Frontend/windows/runner/: Runner.rc  main.cpp
backend/: pyproject.toml
backend/src/: main.py
backend/src/ai/agent/: agent_state.py  graph_builder.py  nodes.py
backend/src/api/: dependencies.py  schemas.py
backend/src/api/routes/: chat.py
backend/src/services/: llm_client.py
(+25 files in other folders)
